# ai-invention-09ca95-pragma-stratified-problog-grounding-hall

./: README.md
paper_latex/: paper.tex  references.bib
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  data.py  preview_data_out.json  pyproject.toml
round-1/experiment-1/: README.md
round-1/experiment-1/demo/: mini_demo_data.json
round-1/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-1/research-1/: README.md
round-1/research-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  research_out.json  research_report.md
round-2/dataset-1/: README.md
round-2/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-2/dataset-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  data.py
round-2/experiment-1/: README.md
round-2/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-2/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-2/research-1/: README.md
round-2/research-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  research_out.json  research_report.md
(+6 files in other folders)
