[project]
name = "gen-art-experiment-1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "attrs==26.1.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.63.0",
    "frozenlist==1.8.0",
    "idna==3.18",
    "kiwisolver==1.5.0",
    "loguru==0.7.3",
    "matplotlib==3.11.0",
    "multidict==6.7.1",
    "numpy==2.4.6",
    "packaging==26.2",
    "pandas==3.0.3",
    "patsy==1.0.2",
    "pillow==12.2.0",
    "propcache==0.5.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "rank-bm25==0.2.2",
    "scipy==1.17.1",
    "six==1.17.0",
    "statsmodels==0.14.6",
    "typing-extensions==4.15.0",
    "yarl==1.24.2",
]
